--- a/System/TecSys/src/HomePage/AdminHomePage.form
+++ b/System/TecSys/src/HomePage/AdminHomePage.form
@@ -4077,7 +4077,6 @@
                                 <properties>
                                   <font size="16"/>
                                   <model>
-                                    <item value=""/>
                                     <item value="1"/>
                                     <item value="2"/>
                                     <item value="3"/>
@@ -4101,7 +4100,6 @@
                                 <properties>
                                   <font size="16"/>
                                   <model>
-                                    <item value=""/>
                                     <item value="1"/>
                                     <item value="2"/>
                                   </model>
@@ -4202,7 +4200,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="2e75" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+                                      <component id="2e75" class="javax.swing.JTextField" binding="ADaddCourseID">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
@@ -4220,7 +4218,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="f5948" class="javax.swing.JComboBox" binding="comboBox9" default-binding="true">
+                                      <component id="f5948" class="javax.swing.JComboBox" binding="ADaddCourseStatus">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                                         </constraints>
@@ -4242,7 +4240,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="25ec0" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+                                      <component id="25ec0" class="javax.swing.JTextField" binding="ADaddCourseName">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
@@ -4264,7 +4262,7 @@
                             <properties/>
                             <border type="none"/>
                             <children>
-                              <component id="497a6" class="javax.swing.JButton" binding="SaveCourseMaterial">
+                              <component id="497a6" class="javax.swing.JButton" binding="AddCourse">
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                 </constraints>
@@ -4404,7 +4402,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="ac2d9" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+                                      <component id="ac2d9" class="javax.swing.JTextField" binding="ADaddCourseQuizPerc">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
@@ -4422,7 +4420,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="501d6" class="javax.swing.JTextField" binding="textField13" default-binding="true">
+                                      <component id="501d6" class="javax.swing.JTextField" binding="ADaddCourseFPracticalPerc">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
@@ -4440,7 +4438,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="8f75d" class="javax.swing.JTextField" binding="textField12" default-binding="true">
+                                      <component id="8f75d" class="javax.swing.JTextField" binding="ADaddCourseFTheoryPerc">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
@@ -4458,7 +4456,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="2e016" class="javax.swing.JTextField" binding="textField11" default-binding="true">
+                                      <component id="2e016" class="javax.swing.JTextField" binding="ADaddCourseMidPerc">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
@@ -4476,7 +4474,7 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="9bb96" class="javax.swing.JTextField" binding="textField10" default-binding="true">
+                                      <component id="9bb96" class="javax.swing.JTextField" binding="ADaddCourseAssessmentPerc">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
@@ -4575,7 +4573,7 @@
                             <properties/>
                             <border type="none"/>
                             <children>
-                              <grid id="2782c" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                              <grid id="2782c" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                 <margin top="0" left="0" bottom="0" right="0"/>
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -4583,40 +4581,78 @@
                                 <properties/>
                                 <border type="none"/>
                                 <children>
-                                  <grid id="53589" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                  <grid id="79673" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
                                     <constraints>
-                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                      <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="18acf" class="javax.swing.JLabel">
+                                      <grid id="53589" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                        <margin top="0" left="0" bottom="0" right="0"/>
                                         <constraints>
-                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                        </constraints>
-                                        <properties>
-                                          <text value="Notice Title"/>
-                                        </properties>
-                                      </component>
-                                    </children>
-                                  </grid>
-                                  <grid id="4321d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                    <margin top="0" left="0" bottom="0" right="0"/>
-                                    <constraints>
-                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties/>
-                                    <border type="none"/>
-                                    <children>
-                                      <component id="94446" class="javax.swing.JTextField" binding="textField14" default-binding="true">
-                                        <constraints>
-                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                                            <preferred-size width="150" height="-1"/>
-                                          </grid>
+                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                         </constraints>
                                         <properties/>
-                                      </component>
+                                        <border type="none"/>
+                                        <children>
+                                          <component id="18acf" class="javax.swing.JLabel">
+                                            <constraints>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                                            </constraints>
+                                            <properties>
+                                              <font size="16"/>
+                                              <text value="Notice Title"/>
+                                            </properties>
+                                          </component>
+                                        </children>
+                                      </grid>
+                                      <grid id="4321d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                        <margin top="0" left="0" bottom="0" right="0"/>
+                                        <constraints>
+                                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="true"/>
+                                        </constraints>
+                                        <properties/>
+                                        <border type="none"/>
+                                        <children>
+                                          <component id="94446" class="javax.swing.JTextField" binding="textField14" default-binding="true">
+                                            <constraints>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
+                                                <preferred-size width="150" height="-1"/>
+                                              </grid>
+                                            </constraints>
+                                            <properties>
+                                              <font size="16"/>
+                                            </properties>
+                                          </component>
+                                        </children>
+                                      </grid>
+                                    </children>
+                                  </grid>
+                                  <grid id="ce306" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                    <margin top="0" left="0" bottom="0" right="0"/>
+                                    <constraints>
+                                      <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
+                                    </constraints>
+                                    <properties/>
+                                    <border type="none"/>
+                                    <children>
+                                      <scrollpane id="63022">
+                                        <constraints>
+                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                        </constraints>
+                                        <properties/>
+                                        <border type="none"/>
+                                        <children>
+                                          <component id="703d1" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+                                            <constraints/>
+                                            <properties>
+                                              <font size="12"/>
+                                            </properties>
+                                          </component>
+                                        </children>
+                                      </scrollpane>
                                     </children>
                                   </grid>
                                 </children>
@@ -4626,6 +4662,7 @@
                                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
+                                  <font size="16"/>
                                   <text value="Add Notice"/>
                                 </properties>
                               </component>
